Switching to temurin eclipse